fix: 학습자 리뷰 등록과 조회 규칙 정리